--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@ title: Code Snippet Manager | Gisto | Snippets made awesome | Manage your github
 <section class="whiter boxes features-boxes">
 
     <div class="w-container">
+
         <div class="w-row">
+
+            <div class="w-col w-col-4 w-clearfix feat">
+                <img alt="Gisto" src="../images/edit.png"/>
+
+                <h3>Rich Editor</h3>
+
+                <p>
+                    Gisto includes Ace a rich code editor for editing your gists on the go
+                    and includes features such as syntax highlighting auto-completion emmet and more.
+                </p>
+            </div>
 
             <div class="w-col w-col-4 w-clearfix feat">
                 <img src="../images/search.png"/>
@@ -18,18 +30,6 @@ title: Code Snippet Manager | Gisto | Snippets made awesome | Manage your github
                     Gists can be found quickly using our search filter and can be filtered by a gist description, file
                     names, tags and more.
                 </p>
-            </div>
-
-            <div class="w-col w-col-4 w-clearfix feat">
-                <img alt="Gisto" src="../images/regular-and-enterprise-login.png"/>
-
-                <h3>Enterprise mode</h3>
-
-                <p>Enterprise mode in Gisto allows connecting to your github enterprise (on-premise) instead of public
-                    github.</p>
-
-                <p>Gisto works the same as it did until now except for a small subset of features that do not make sense
-                    on GitHub Enterprise.</p>
             </div>
 
             <div class="w-col w-col-4 w-clearfix feat">
@@ -44,6 +44,7 @@ title: Code Snippet Manager | Gisto | Snippets made awesome | Manage your github
             </div>
 
         </div>
+
         <div class="center-holder">
             <a href="features/" class="btn bg-grey txt-white btn-center">
                 More features <i class="icon-arrow-right"></i>
@@ -116,24 +117,31 @@ title: Code Snippet Manager | Gisto | Snippets made awesome | Manage your github
 
                 <div class="download w-col w-col-3 w-clearfix txt-center">
                     <p><i class="icon-windows icon-4x"></i></p>
+
                     <h3>Windows<br/> <b>Download</b></h3>
-                    <a href="{{ site.download_url }}/Gisto-{{ current_version }}-Win_x86.zip"><b>32</b>BIT</a> | <a href="{{ site.download_url }}/Gisto-{{ current_version }}-Win_x86_64.zip"><b>64</b>BIT</a>
+                    <a href="{{ site.download_url }}/Gisto-{{ current_version }}-Win_x86.zip"><b>32</b>BIT</a> | <a
+                        href="{{ site.download_url }}/Gisto-{{ current_version }}-Win_x86_64.zip"><b>64</b>BIT</a>
                 </div>
 
                 <div class="download w-col w-col-3 w-clearfix txt-center">
                     <p class="txt-center"><i class="icon-apple icon-4x"></i></p>
+
                     <h3>OSX<br/> <b>Download</b></h3>
-                    <a href="{{ site.download_url }}/Gisto-{{ current_version }}-OSX_x86.dmg"><b>32</b>BIT</a> | <a href="{{ site.download_url }}/Gisto-{{ current_version }}-OSX_x86_64.dmg"><b>64</b>BIT</a>
+                    <a href="{{ site.download_url }}/Gisto-{{ current_version }}-OSX_x86.dmg"><b>32</b>BIT</a> | <a
+                        href="{{ site.download_url }}/Gisto-{{ current_version }}-OSX_x86_64.dmg"><b>64</b>BIT</a>
                 </div>
 
                 <div class="download w-col w-col-3 w-clearfix txt-center">
                     <p class="txt-center"><i class="icon-linux icon-4x"></i></p>
+
                     <h3>Linux 64bit<br/> <b>Download</b></h3>
-                    <a href="{{ site.download_url }}/Gisto-{{ current_version }}-Linux_x86.zip"><b>32</b>BIT</a> | <a href="{{ site.download_url }}/Gisto-{{ current_version }}-Linux_x86_64.zip"><b>64</b>BIT</a>
+                    <a href="{{ site.download_url }}/Gisto-{{ current_version }}-Linux_x86.zip"><b>32</b>BIT</a> | <a
+                        href="{{ site.download_url }}/Gisto-{{ current_version }}-Linux_x86_64.zip"><b>64</b>BIT</a>
                 </div>
 
                 <div class="download w-col w-col-3 w-clearfix txt-center">
                     <p><i class="icon-cogs icon-4x"></i></p>
+
                     <h3>Nightly builds<br/> <b>Download</b></h3>
                     <a href="{{ site.nightly_url }}">Build server</a>
                 </div>
