--- a/features/index.html
+++ b/features/index.html
@@ -31,16 +31,14 @@ title: Features | Gisto
             </div>
 
             <div class="w-col w-col-4 w-clearfix feat">
-                <img alt="Gisto" src="../images/regular-and-enterprise-login.png"/>
+                <img src="../images/search.png" alt="Gisto"/>
 
-                <h3>Enterprise mode</h3>
+                <h3>Search</h3>
 
-                <p>Enterprise mode in Gisto allows connecting to your GitHub enterprise (on-premise) instead of public
-                    github.</p>
-
-                <p>Gisto works the same as it did until now except for a small subset of features that do not make sense
-                    on GitHub Enterprise.</p>
-
+                <p>
+                    Gists can be found quickly using our search filter and can be filtered by a gist description, file
+                    names, tags and more.
+                </p>
             </div>
 
             <div class="w-col w-col-4 w-clearfix feat">
@@ -72,14 +70,16 @@ title: Features | Gisto
             </div>
 
             <div class="w-col w-col-4 w-clearfix feat">
-                <img src="../images/search.png" alt="Gisto"/>
+                <img alt="Gisto" src="../images/regular-and-enterprise-login.png"/>
 
-                <h3>Search</h3>
+                <h3>Enterprise mode</h3>
 
-                <p>
-                    Gists can be found quickly using our search filter and can be filtered by a gist description, file
-                    names, tags and more.
-                </p>
+                <p>Enterprise mode in Gisto allows connecting to your GitHub enterprise (on-premise) instead of public
+                    github.</p>
+
+                <p>Gisto works the same as it did until now except for a small subset of features that do not make sense
+                    on GitHub Enterprise.</p>
+
             </div>
 
             <div class="w-col w-col-4 w-clearfix feat">
@@ -134,9 +134,9 @@ title: Features | Gisto
             <div class="w-col w-col-4 w-clearfix feat">
                 <img src="../images/QWERTY_keyboard.jpg" alt="Gisto"/>
 
-                <h3>Keybord shortcuts</h3>
+                <h3>Keyboard shortcuts</h3>
 
-                <p>Few intuitive keyboard short cuts are availavle, just hit <code>?</code> on the keyboard.</p>
+                <p>Few intuitive keyboard short cuts are available, just hit <code>?</code> on the keyboard.</p>
 
                 <p>Different views have their own shortcuts.</p>
             </div>
