FIX (mobile): fix mobile layout
- fix mobile layout due to recent changes

--- a/download/index.html
+++ b/download/index.html
@@ -39,7 +39,7 @@ title: Downloads | Gisto
                 <div class="w-row">
 
                     <div class="download w-col w-col-4 w-clearfix txt-center">
-                        <p><i class="icon-windows icon-4x"></i></p>
+                        <p class="txt-center"><i class="icon-windows icon-4x"></i></p>
                         <h3>Windows<br/> <b>Download</b></h3>
                         <a href="{{ site.download_url_mirror }}/Gisto-{{ current_version }}-Win_x86.zip"><b>32</b>BIT</a> | <a href="{{ site.download_url_mirror }}/Gisto-{{ current_version }}-Win_x86_64.zip"><b>64</b>BIT</a>
                     </div>
