--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ title: Code Snippet Manager | Gisto | Snippets made awesome | Manage your github
             <div class="w-row">
 
                 <div class="download w-col w-col-3 w-clearfix txt-center">
-                    <p><i class="icon-windows icon-4x"></i></p>
+                    <p class="txt-center"><i class="icon-windows icon-4x"></i></p>
 
                     <h3>Windows<br/> <b>Download</b></h3>
                     <a href="{{ site.download_url }}/Gisto-{{ current_version }}-Win_x86.zip"><b>32</b>BIT</a> | <a
@@ -140,7 +140,7 @@ title: Code Snippet Manager | Gisto | Snippets made awesome | Manage your github
                 </div>
 
                 <div class="download w-col w-col-3 w-clearfix txt-center">
-                    <p><i class="icon-cogs icon-4x"></i></p>
+                    <p class="txt-center"><i class="icon-cogs icon-4x"></i></p>
 
                     <h3>Nightly builds<br/> <b>Download</b></h3>
                     <a href="{{ site.nightly_url }}">Build server</a>
