--- a/src/index.html
+++ b/src/index.html
@@ -135,8 +135,8 @@ title: Code Snippet Manager | Gisto | Snippets made awesome | Manage your github
                     <p class="txt-center"><i class="fa fa-linux fa-4x"></i></p>
 
                     <h3>Linux 64bit<br/> <b>Download</b></h3>
-                    <a href="{{ site.download_url }}/Gisto-{{ current_version }}-Linux_x86.zip"><b>32</b>BIT</a> | <a
-                        href="{{ site.download_url }}/Gisto-{{ current_version }}-Linux_x86_64.zip"><b>64</b>BIT</a>
+                    <a href="{{ site.download_url }}/Gisto-{{ current_version }}-Linux_x86.tar.gz"><b>32</b>BIT</a> | <a
+                        href="{{ site.download_url }}/Gisto-{{ current_version }}-Linux_x86_64.tar.gz"><b>64</b>BIT</a>
                 </div>
 
                 <div class="download w-col w-col-3 w-clearfix txt-center">
