Small UI fixes + gulp fixes (need to run `npm install`)

--- a/src/_pages/tour.html
+++ b/src/_pages/tour.html
@@ -20,15 +20,15 @@ permalink: /tour/
                 <h3>Single gist view</h3>
 
                 <div style="background: url(/images/gisto.png);box-shadow: 0px 0px 20px #ccc;width: 960px;height: 735px;position: relative">
-                    <div class="tour_logo"></div>
-                    <div class="tour_search"></div>
-                    <div class="tour_star"></div>
-                    <div class="tour_lock"></div>
-                    <div class="tour_gist1"></div>
-                    <div class="tour_gist1_file1"></div>
-                    <div class="tour_gist_count"></div>
-                    <div class="tour_notification_server_online"></div>
-                    <div class="tour_gist_comments"></div>
+                    <div class="tour-item tour-logo"></div>
+                    <div class="tour-item tour-search"></div>
+                    <div class="tour-item tour-star"></div>
+                    <div class="tour-item tour-lock"></div>
+                    <div class="tour-item tour-gist1"></div>
+                    <div class="tour-item tour-gist1_file1"></div>
+                    <div class="tour-item tour-gist_count"></div>
+                    <div class="tour-item tour-notification_server_online"></div>
+                    <div class="tour-item tour-gist_comments"></div>
                 </div>
 
             </div>
