--- a/src/_pages/download.html
+++ b/src/_pages/download.html
@@ -51,7 +51,7 @@ permalink: /download/
                     <div class="download w-col w-col-4 w-clearfix txt-center">
                         <p class="txt-center"><i class="fa fa-linux fa-4x"></i></p>
                         <h3>Linux 64bit<br/> <b>Download</b></h3>
-                        <a href="{{ site.download_url }}/Gisto-{{ current_version }}-Linux_x86.zip"><b>32</b>BIT</a> | <a href="{{ site.download_url }}/Gisto-{{ current_version }}-Linux_x86_64.zip"><b>64</b>BIT</a>
+                        <a href="{{ site.download_url }}/Gisto-{{ current_version }}-Linux_x86.tar.gz"><b>32</b>BIT</a> | <a href="{{ site.download_url }}/Gisto-{{ current_version }}-Linux_x86_64.tar.gz"><b>64</b>BIT</a>
                     </div>
 
 
@@ -79,7 +79,7 @@ permalink: /download/
                     <div class="download w-col w-col-4 w-clearfix txt-center">
                         <p class="txt-center"><i class="fa fa-linux fa-4x"></i></p>
                         <h3>Linux 64bit<br/> <b>Download</b></h3>
-                        <a href="{{ site.download_url_mirror }}/Gisto-{{ current_version }}-Linux_x86.zip"><b>32</b>BIT</a> | <a href="{{ site.download_url_mirror }}/Gisto-{{ current_version }}-Linux_x86_64.zip"><b>64</b>BIT</a>
+                        <a href="{{ site.download_url_mirror }}/Gisto-{{ current_version }}-Linux_x86.tar.gz"><b>32</b>BIT</a> | <a href="{{ site.download_url_mirror }}/Gisto-{{ current_version }}-Linux_x86_64.tar.gz"><b>64</b>BIT</a>
                     </div>
 
 
@@ -103,7 +103,7 @@ permalink: /download/
                         <pre><span>SHELL</span>$ yaourt -S gisto</pre>
                         </p>
 
-                    
+
                 <h2 id="prevs">Previous versions</h2>
 
                 {% for v in site.releases %}
