Update texts and fix gulp to run via bundle

--- a/src/_pages/faq.html
+++ b/src/_pages/faq.html
@@ -17,6 +17,7 @@ permalink: /faq/
                 <h2>QUESTIONS</h2>
                 <nav>
                     <ul>
+                        <li><a class="innsite" href="#q1">What is Gisto?</a></li>
                         <li><a class="innsite" href="#q2">Authentication</a></li>
                         <li><a class="innsite" href="#q3">Do you use backend server?</a></li>
                         <li><a class="innsite" href="#q4">Who can see my gists?</a></li>
@@ -31,10 +32,20 @@ permalink: /faq/
             <div class="w-col w-col-9 w-clearfix">
 
 
+                <h2 id="q1">What is Gisto?</h2>
+
+                <p>Gisto is a code snippet manager that runs on GitHub Gists and adds additional features
+                    such as searching, tagging and sharing gists while including a rich code editor.
+                </p>
+                <p>Gisto is cross platform and is in constant sync with GitHub so you can view and edit
+                    your Gists via both Gisto and GitHub.
+                </p>
+
+
                 <h2 id="q2">Authentication</h2>
 
                 <p>Gisto authenticates to GitHub by using basic authentication over SSL and retrieving an oAuth2 token
-                    Thus the need for your GitHub user and password.</p>
+                    thus the need for your GitHub user and password.</p>
 
                 <p>Gisto only saves the oAuth2 token received after authenticating and nothing else.
                     If you would rather to supply your own access token without providing Gisto your login details you
@@ -49,18 +60,17 @@ permalink: /faq/
                     involved in gist management. </p>
 
                 <p>However we do use a backend server for "notifications and sharing service", the only data stored is username
-                    and gist ID and this is to allow Gisto to notify user if there are shares waiting for him/her to
-                    accept (fork).
+                    and gist ID and this is to allow Gisto to notify user if there are Gists shared with him.
                 </p>
 
-                <p>The server code is in the repository should you wish to run an alternative server.</p>
+                <p>You also have the option of running your own notification server so you can be sure your data is secure.</p>
 
-                <h2 id="q4">Who can see my gists?</h2>
+                <h2 id="q4">Who can see my Gists?</h2>
 
-                <p>As per GitHub Guidelines gists are not private and are available to the public.</p>
+                <p>As per GitHub Guidelines Gists are not private and are available to the public.</p>
 
-                <p>The difference between secret and public gists is that public gists are listed on GitHub website for
-                    public viewing and searching while secret gists are not</p>
+                <p>The difference between secret and public Gists is that public Gists are listed on GitHub website for
+                    public viewing and searching while secret Gists are not</p>
 
 
                 <h2 id="q5">Do you plan to support / add support for [<i>future-name-here</i>]?</h2>
