--- a/src/_pages/features.html
+++ b/src/_pages/features.html
@@ -24,11 +24,6 @@ permalink: /features/
                     Gisto works using GitHub gists infrastructure, any change you make is automatically updated at
                     GitHub.
                 </p>
-
-                <p>
-                    If you don't have access to your computer you can browse normally at GitHub to view everything
-                    you've created.
-                </p>
             </div>
 
             <div class="w-col w-col-4 w-clearfix feat">
@@ -37,7 +32,7 @@ permalink: /features/
                 <h3>Search</h3>
 
                 <p>
-                    Gists can be found quickly using our search filter and can be filtered by a gist description, file
+                    Gists can be found quickly using our search and can be filtered by gist description, file
                     names, tags and more.
                 </p>
             </div>
@@ -48,8 +43,7 @@ permalink: /features/
                 <h3>Gist tagging</h3>
 
                 <p>
-                    Gisto allows you to tag gists with custom tags this helps you find your gists easily and categorize
-                    them upon your needs.
+                    Gisto allows you to tag Gists with custom tags to help you find your Gists easily.
                 </p>
             </div>
 
@@ -64,9 +58,8 @@ permalink: /features/
                 <h3>Quick Sharing</h3>
 
                 <p>
-                    Gisto allows you to quickly download,copy and view your gists on GitHub websites, In addition you
-                    can also generate
-                    embed links or view your gists on plunkr.
+                    Gisto allows you to quickly download,copy and view your Gists on GitHub, in addition you
+                    can also generate embed links or view your Gists on plunkr.
                 </p>
             </div>
 
@@ -77,10 +70,6 @@ permalink: /features/
 
                 <p>Enterprise mode in Gisto allows connecting to your GitHub enterprise (on-premise) instead of public
                     github.</p>
-
-                <p>Gisto works the same as it did until now except for a small subset of features that do not make sense
-                    on GitHub Enterprise.</p>
-
             </div>
 
             <div class="w-col w-col-4 w-clearfix feat">
@@ -113,7 +102,7 @@ permalink: /features/
                 <h3>Revision browser</h3>
 
                 <p>
-                    The revision browser enables you to see all previous changes to the gist as well as changes
+                    The revision browser enables you to see all previous changes to the gist as well as change
                     statistics and
                     viewing the revision as it were at that time.
                 </p>
@@ -124,8 +113,8 @@ permalink: /features/
 
                 <h3>Rich editor</h3>
 
-                <p>Thanks to <a href="http://ace.c9.io/">ACE</a> editor - you can edit gists using a rich code editor
-                    featuring syntax highlighting, auto-completion, emmet and more .</p>
+                <p>Thanks to <a href="http://ace.c9.io/">ACE</a> editor you can edit Gists using a rich code editor
+                    featuring syntax highlighting, auto-completion, emmet and more.</p>
             </div>
 
         </div>
@@ -137,9 +126,7 @@ permalink: /features/
 
                 <h3>Keyboard shortcuts</h3>
 
-                <p>Few intuitive keyboard short cuts are available, just hit <code>?</code> on the keyboard.</p>
-
-                <p>Different views have their own shortcuts.</p>
+                <p>Gisto also has a variety of keyboard shortcuts, just press <code>?</code> to view them.</p>
             </div>
 
             <div class="w-col w-col-4 w-clearfix feat">
@@ -147,7 +134,7 @@ permalink: /features/
 
                 <h3>Sharing gists</h3>
 
-                <p>You can send and receive gists between Gisto users very easily, all you need is the recipient GitHub
+                <p>You can send and receive Gists between Gisto users very easily, all you need is the recipient GitHub
                     username.</p>
 
                 <p>The recipient will receive a notification and will be able to fork the gist if he wishes.</p>
