--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@ title: Code Snippet Manager | Gisto | Snippets made awesome | Manage your github
                 <h3>Rich Editor</h3>
 
                 <p>
-                    Gisto includes Ace a rich code editor for editing your gists on the go
+                    Gisto includes Ace. A rich code editor for editing your Gists on the go
                     and includes features such as syntax highlighting auto-completion emmet and more.
                 </p>
             </div>
@@ -27,7 +27,7 @@ title: Code Snippet Manager | Gisto | Snippets made awesome | Manage your github
                 <h3>Search</h3>
 
                 <p>
-                    Gists can be found quickly using our search filter and can be filtered by a gist description, file
+                    Gists can be found quickly using our search and can be filtered by gist description, file
                     names, tags and more.
                 </p>
             </div>
@@ -38,8 +38,7 @@ title: Code Snippet Manager | Gisto | Snippets made awesome | Manage your github
                 <h3>Tags</h3>
 
                 <p>
-                    Gisto allows you to tag gists with custom tags this helps you find your gists easily and categorize
-                    them upon your needs.
+                    Gisto allows you to tag Gists with custom tags to help you find your Gists easily.
                 </p>
             </div>
 
@@ -88,7 +87,7 @@ title: Code Snippet Manager | Gisto | Snippets made awesome | Manage your github
 
                 <p>
                     Gisto is built using the open web technologies using several open source projects such as
-                    AngularJS, node-webkit, Ace Editor and many more
+                    AngularJS, nw.js, Ace Editor and many more
                 </p>
             </div>
 
@@ -127,8 +126,7 @@ title: Code Snippet Manager | Gisto | Snippets made awesome | Manage your github
                     <p class="txt-center"><i class="fa fa-apple fa-4x"></i></p>
 
                     <h3>OSX<br/> <b>Download</b></h3>
-                    <a href="{{ site.download_url }}/Gisto-{{ current_version }}-OSX_x86.dmg"><b>32</b>BIT</a> | <a
-                        href="{{ site.download_url }}/Gisto-{{ current_version }}-OSX_x86_64.dmg"><b>64</b>BIT</a>
+                    <a href="{{ site.download_url }}/Gisto-{{ current_version }}-OSX_x86_64.dmg"><b>64</b>BIT</a>
                 </div>
 
                 <div class="download w-col w-col-3 w-clearfix txt-center">
