--- a/src/_pages/download.html
+++ b/src/_pages/download.html
@@ -45,7 +45,7 @@ permalink: /download/
                     <div class="download w-col w-col-4 w-clearfix txt-center">
                         <p class="txt-center"><i class="fa fa-apple fa-4x"></i></p>
                         <h3>OSX<br/> <b>Download</b></h3>
-                        <a href="{{ site.download_url }}/Gisto-{{ current_version }}-OSX_x86.dmg"><b>32</b>BIT</a> | <a href="{{ site.download_url }}/Gisto-{{ current_version }}-OSX_x86_64.dmg"><b>64</b>BIT</a>
+                        <a href="{{ site.download_url }}/Gisto-{{ current_version }}-OSX_x86_64.dmg"><b>64</b>BIT</a>
                     </div>
 
                     <div class="download w-col w-col-4 w-clearfix txt-center">
@@ -73,7 +73,7 @@ permalink: /download/
                     <div class="download w-col w-col-4 w-clearfix txt-center">
                         <p class="txt-center"><i class="fa fa-apple fa-4x"></i></p>
                         <h3>OSX<br/> <b>Download</b></h3>
-                        <a href="{{ site.download_url_mirror }}/Gisto-{{ current_version }}-OSX_x86.dmg"><b>32</b>BIT</a> | <a href="{{ site.download_url_mirror }}/Gisto-{{ current_version }}-OSX_x86_64.dmg"><b>64</b>BIT</a>
+                        <a href="{{ site.download_url_mirror }}/Gisto-{{ current_version }}-OSX_x86_64.dmg"><b>64</b>BIT</a>
                     </div>
 
                     <div class="download w-col w-col-4 w-clearfix txt-center">
