changes to accomponiment version 0.3.0 of gist
- new blog
- site re-structure
- text content fixes

--- a/src/_pages/download.html
+++ b/src/_pages/download.html
@@ -23,7 +23,7 @@ permalink: /download/
                 <h2>NAV</h2>
                 <nav>
                     <ul>
-                        <li><a class="innsite" href="#download">Download</a></li>
+                        <li><a class="innsite" href="#release">Download</a></li>
                         <li><a class="innsite" href="#mirror">Mirror</a></li>
                         <li><a class="innsite" href="#nightly">Nightly builds</a></li>
                         <li><a class="innsite" href="#other">Other install options</a></li>
@@ -34,7 +34,7 @@ permalink: /download/
 
             <div class="w-col w-col-9 w-clearfix">
 
-                <div class="w-row">
+                <div class="w-row" id="release">
 
                     <div class="download w-col w-col-4 w-clearfix txt-center">
                         <p class="txt-center"><i class="fa fa-windows fa-4x"></i></p>
