--- a/src/_pages/faq.html
+++ b/src/_pages/faq.html
@@ -23,7 +23,7 @@ permalink: /faq/
                         <li><a class="innsite" href="#q4">Who can see my gists?</a></li>
                         <li><a class="innsite" href="#q5">Do you plan to support / add support for
                             [future-name-here]?</a></li>
-                        <li><a class="innsite" href="#q8">Issues, bug reporting and pull and feature requests</a></li>
+                        <li><a class="innsite" href="#q8">Issues, bug reporting, pull and feature requests</a></li>
                         <li><a class="innsite" href="#q9">How to contact us</a></li>
                     </ul>
                 </nav>
@@ -79,7 +79,7 @@ permalink: /faq/
                         href="https://github.com/Gisto/Gisto/issues">issue tracker</a>, we appreciate and strive for
                     suggestions on how to improve Gisto.</p>
 
-                <h2 id="q8">Issues, bug reporting and pull and feature requests</h2>
+                <h2 id="q8">Issues, bug reporting, pull and feature requests</h2>
 
                 <p>Please feel free to add a bug / feature request / suggestions to the <a
                         href="https://github.com/Gisto/Gisto/issues">issue tracker</a>.
