Fix minification and text
- fix minification of inline scripts
- change blog "read more" link

--- a/src/_pages/blog.html
+++ b/src/_pages/blog.html
@@ -22,7 +22,7 @@ permalink: /blog/
 
       <p>{{ post.excerpt }}</p>
 
-      <a class="more" href="{{ post.url }}"> Continue &raquo; </a>
+      <a class="more" href="{{ post.url }}"> Read more <i class="fa fa-chevron-right"></i> </a>
 
       {% endfor %}
 
