DOCS add Slackware install method
Signed-off-by: Ryan P.C. McQuen <ryan.q@linux.com>

--- a/src/_pages/download.html
+++ b/src/_pages/download.html
@@ -102,6 +102,9 @@ permalink: /download/
                         <p>via <b>Archlinux AUR</b>:
                         <pre><span>SHELL</span>$ yaourt -S gisto</pre>
                         </p>
+                        <p>via <b>SlackBuilds.org (Slackware)</b>:
+                        <pre><span>SHELL</span># sbopkg -i gisto</pre>
+                        </p>
 
 
                 <h2 id="prevs">Previous versions</h2>
