--- a/src/index.html
+++ b/src/index.html
@@ -157,6 +157,9 @@ title: Code Snippet Manager | Gisto | Snippets made awesome | Manage your github
                         <p>via <b>Archlinux AUR</b>:
                         <pre><span>SHELL</span>$ yaourt -S gisto</pre>
                         </p>
+                        <p>via <b>SlackBuilds.org (Slackware)</b>:
+                        <pre><span>SHELL</span># sbopkg -i gisto</pre>
+                        </p>
 
                     </div>
                 </div>
