--- a/src/_pages/changelog.html
+++ b/src/_pages/changelog.html
@@ -17,6 +17,7 @@ permalink: /changelog/
     <h2>VERSIONS</h2>
     <nav>
         <ul>
+            <li><a class="innsite" href="#v031">v0.3.1</a></li>
             <li><a class="innsite" href="#v030">v0.3.0</a></li>
             <li><a class="innsite" href="#v026b">v0.2.6b</a></li>
             <li><a class="innsite" href="#v025b">v0.2.5b</a></li>
@@ -32,6 +33,21 @@ permalink: /changelog/
 </div>
 
 <div class="w-col w-col-9 w-clearfix main">
+
+<h2 id="v031">0.3.1</h2>
+    <ul class="fa-ul">
+        <li class="icons-li"><i class="fa fa-chevron-circle-right"></i> FEATURE (jsbin support): Add support to open Gists with JSBIN - Thanks to @ryanpcmcquen</li>
+        <li class="icons-li"><i class="fa fa-chevron-circle-right"></i> FEATURE (editor indentation): Add ability to adjust how many spaces are the editor indentation.</li>
+        <li class="icons-li"><i class="fa fa-chevron-circle-right"></i> FEATURE (single gist): Add an option to copy raw gist url to the clipboard.</li>
+        <li class="icons-li"><i class="fa fa-chevron-circle-right"></i> FEATURE (gist creation): Add an option to set defaults for public or private for new gists.</li>
+        <li class="icons-li"><i class="fa fa-chevron-circle-right"></i> FEATURE (gist creation): Add language (syntax highlighting) dropdown to create gist screen.</li>
+        <li class="icons-li"><i class="fa fa-chevron-circle-right"></i> FIX (tags): Fix duplicates error when a gist has 2 tags with the same name.</li>
+        <li class="icons-li"><i class="fa fa-chevron-circle-right"></i> FIX (gist creation): Add validation to disallow creating gists with no files.</li>
+        <li class="icons-li"><i class="fa fa-chevron-circle-right"></i> FIX (fork): Fix tags not showing in the list after forking a gist.</li>
+        <li class="icons-li"><i class="fa fa-chevron-circle-right"></i> FIX (notification messages): Fix notifications overlapping if there is more than one notification active at a time.</li>
+        <li class="icons-li"><i class="fa fa-chevron-circle-right"></i> IMPROVE (angular): Update angular to version 1.3.5</li>
+        <li class="icons-li"><i class="fa fa-chevron-circle-right"></i> IMPROVE (syntax highlighting): Update syntax highlighters to support more languages.</li>
+    </ul>
 
 <h2 id="v030">0.3.0</h2>
 <ul class="fa-ul">
