FIX (hotfix): adjust to hotfix downloads for now

--- a/src/index.html
+++ b/src/index.html
@@ -118,23 +118,22 @@ title: Code Snippet Manager | Gisto | Snippets made awesome | Manage your github
                     <p class="txt-center"><i class="fa fa-windows fa-4x"></i></p>
 
                     <h3>Windows<br/> <b>Download</b></h3>
-                    <a href="{{ site.download_url }}/Gisto-{{ current_version }}-Win_x86.zip"><b>32</b>BIT</a> | <a
-                        href="{{ site.download_url }}/Gisto-{{ current_version }}-Win_x86_64.zip"><b>64</b>BIT</a>
+                    <a href="https://github.com/Gisto/Gisto/releases/download/0.3.2-beta/Gisto-v0.3.2-windows-x64.zip"><b>64</b>BIT</a>
                 </div>
 
                 <div class="download w-col w-col-3 w-clearfix txt-center">
                     <p class="txt-center"><i class="fa fa-apple fa-4x"></i></p>
 
                     <h3>OSX<br/> <b>Download</b></h3>
-                    <a href="{{ site.download_url }}/Gisto-{{ current_version }}-OSX_x86_64.dmg"><b>64</b>BIT</a>
+                    <a href="https://github.com/Gisto/Gisto/releases/download/0.3.2-beta/Gisto-v0.3.2-macos-x64.zip"><b>64</b>BIT</a>
                 </div>
 
                 <div class="download w-col w-col-3 w-clearfix txt-center">
                     <p class="txt-center"><i class="fa fa-linux fa-4x"></i></p>
 
                     <h3>Linux 64bit<br/> <b>Download</b></h3>
-                    <a href="{{ site.download_url }}/Gisto-{{ current_version }}-Linux_x86.tar.gz"><b>32</b>BIT</a> | <a
-                        href="{{ site.download_url }}/Gisto-{{ current_version }}-Linux_x86_64.tar.gz"><b>64</b>BIT</a>
+                    <a href="https://github.com/Gisto/Gisto/releases/download/0.3.2-beta/Gisto-v0.3.2-linux-win32.zip"><b>32</b>BIT</a> | <a
+                        href="https://github.com/Gisto/Gisto/releases/download/0.3.2-beta/Gisto-v0.3.2-linux-x64.zip"><b>64</b>BIT</a>
                 </div>
 
                 <div class="download w-col w-col-3 w-clearfix txt-center">
@@ -146,34 +145,34 @@ title: Code Snippet Manager | Gisto | Snippets made awesome | Manage your github
 
             </div>
 
-            <div class="w-container">
-                <div class="w-row">
-                    <div class="w-col w-col-pull-1 w-col-push-3 w-col-6 ">
-                        <h2>Other install options:</h2>
+            <!--<div class="w-container">-->
+                <!--<div class="w-row">-->
+                    <!--<div class="w-col w-col-pull-1 w-col-push-3 w-col-6 ">-->
+                        <!--<h2>Other install options:</h2>-->
 
-                        <p>via <b>Homebrew cask</b>:
-                        <pre><span>SHELL</span>$ brew cask install gisto</pre>
-                        </p>
-                        <p>via <b>Archlinux AUR</b>:
-                        <pre><span>SHELL</span>$ yaourt -S gisto</pre>
-                        </p>
-                        <p>via <b>SlackBuilds.org (Slackware)</b>:
-                        <pre><span>SHELL</span># sbopkg -i gisto</pre>
-                        </p>
+                        <!--<p>via <b>Homebrew cask</b>:-->
+                        <!--<pre><span>SHELL</span>$ brew cask install gisto</pre>-->
+                        <!--</p>-->
+                        <!--<p>via <b>Archlinux AUR</b>:-->
+                        <!--<pre><span>SHELL</span>$ yaourt -S gisto</pre>-->
+                        <!--</p>-->
+                        <!--<p>via <b>SlackBuilds.org (Slackware)</b>:-->
+                        <!--<pre><span>SHELL</span># sbopkg -i gisto</pre>-->
+                        <!--</p>-->
 
-                    </div>
-                </div>
-            </div>
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
 
-            <div class="center-holder">
-                <a href="download/" class="btn bg-grey txt-white btn-center">
-                    Mirrors and prev. versions <i class="fa fa-arrow-right"></i>
-                </a>
+            <!--<div class="center-holder">-->
+                <!--<a href="download/" class="btn bg-grey txt-white btn-center">-->
+                    <!--Mirrors and prev. versions <i class="fa fa-arrow-right"></i>-->
+                <!--</a>-->
 
-                <a href="changelog/" class="btn bg-grey txt-white btn-center">
-                    Change log
-                </a>
-            </div>
+                <!--<a href="changelog/" class="btn bg-grey txt-white btn-center">-->
+                    <!--Change log-->
+                <!--</a>-->
+            <!--</div>-->
 
 
         </div>
