FIX (downloads): temporary note on downloads

--- a/src/index.html
+++ b/src/index.html
@@ -110,6 +110,12 @@ title: Code Snippet Manager | Gisto | Snippets made awesome | Manage your github
             {% endfor %} - <b>RELEASED:</b> {{ site.gisto_build_date }}</p>
         <br/>
 
+        <div class="w-col w-col-10 w-clearfix">
+        <p><strong>{{ site.gisto_build_date }} Note:</strong><br/>Due to recent <a target="_blank" href="https://githubengineering.com/crypto-deprecation-notice/"><u>Github changes in TLS policies</u></a>, for now we provide runnable binaries <s>installers</s> for all the platform.
+            Installers for all platform will be released through the regular channels soon after</p>
+        </div>
+
+
         <div class="w-container">
 
             <div class="w-row">
